tests/ui/coroutine/auto-trait-regions.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/auto-trait-regions.rs:45:24
   |
LL |         let a = A(&mut true, &mut true, No);
   |                        ^^^^                - temporary value is freed at the end of this statement
   |                        |
   |                        creates a temporary value which is freed while still in use
...
LL |         assert_foo(a);
   |                    - borrow later used here
   |
help: consider using a `let` binding to create a longer lived value
   |
LL ~         let binding = true;
LL ~         let a = A(&mut binding, &mut true, No);
   |

error[E0716]: temporary value dropped while borrowed
  --> $DIR/auto-trait-regions.rs:45:35
   |
LL |         let a = A(&mut true, &mut true, No);
   |                                   ^^^^     - temporary value is freed at the end of this statement
   |                                   |
   |                                   creates a temporary value which is freed while still in use
...
LL |         assert_foo(a);
   |                    - borrow later used here
   |
help: consider using a `let` binding to create a longer lived value
   |
LL ~         let binding = true;
LL ~         let a = A(&mut true, &mut binding, No);
   |

error: higher-ranked subtype error
  --> $DIR/auto-trait-regions.rs:31:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/auto-trait-regions.rs:51:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0716`.
